fix blog word-wrap overflow

--- a/static/blog/css/style.css
+++ b/static/blog/css/style.css
@@ -89,6 +89,7 @@ code{
 p{
     text-align: justify;
     margin-top: 0.2em;
+    word-wrap: break-word;
 }
 
 img:not(.notcentered){
